--- a/_source/2017-09-10-nse.Rmd
+++ b/_source/2017-09-10-nse.Rmd
@@ -12,7 +12,7 @@ As with many aspects of the tidyverse, its non-standard evaluation (NSE) impleme
 
 My approach was listing a number of terms and study them one by one. Mainly consulting [Advanced R](http://adv-r.hadley.nz/) and the [R Language Definition](ftp://cran.r-project.org/pub/R/doc/manuals/r-release/R-lang.html). For tidy eval I leaned heavily on the [Programming with dplyr vignette](https://cran.r-project.org/web/packages/dplyr/vignettes/programming.html) and the function documentations. This is also how this blog post is built. We are hopping from term to term, to we see how they relate. You will find references to the sources in the text, in case you want to read more about a topic.
 
-*Note this is v2, in which the `expression` section is rewritten. To see earlier versions see [here](https://github.com/EdwinTh/EdwinTh.github.io/releases).*
+*Note this is v3, in which the overscope gets mentioned and quosures are more elaborated on. To see earlier versions see [here](https://github.com/EdwinTh/EdwinTh.github.io/releases).*
 
 # Base R, non-standard evaluation
 
@@ -140,7 +140,7 @@ Yeah, that works. But, wait a minute. How does `eval()` now know that *mpg* is a
 
 When you think about it a little longer, NSE is only possible when function arguments are not evaluated directly. If the function was the inpatient kid that wanted to put `filt_cond` in its mouth right away, it would have failed to find an object with the name *mpg* in the global environment. When the function is called, a provided arguments is stored in a **promise**. The promise of the argument contains the value of the argument, but also an expression of the argument. The function does not bother about the value of the promise, until the function argument is actually used in the function. The `substitute()` function does only enter the expression part of the promise. In the `my_filt()` example, the promise associated with the `x` argument will have the actual data frame belonging to the object `mtcars` as its value, and the name *mtcars* as its expression. In the second and third line of the function, the value of this argument is accessed. The promise associated with the `filt_cond` argument, however. does not have a value. But it does have a call as its expression. As soon as we use this argument, the function would fail. But we don't. With `substitute()` we only access the expression of the promise [R lang](https://cran.r-project.org/doc/manuals/r-release/R-lang.html#Promise-objects). 
 
-## `formula`
+## `formula` and `overscoping`
 
 Before we move to tidy eval there is one more concept we have to elaborate on, the `formula`. Probably you have used formulas a lot, but did you ever think about how odd they are? Take the following example
 
@@ -149,6 +149,22 @@ mod <- lm(vs ~ mpg + cyl, data = mtcars)
 ```
 
 No R user would have trouble reading the above, but picture yourself coming from another programming language and stumbling upon it. It as an example of a domain specific language (DSL). DSLs exploit R's NSE possibilities by giving alternative meaning to the language in specific contexts. Other examples are `ggplot2` and `dplyr`. Just like functions, do formulas enclose the environment they are created in. Meaning that when the formula is evaluated later in a different environment, it can still access all the object that lived in its original environment.
+
+Formulas, thus, can find variables in multiple environments. Like so:
+
+```{r}
+not_in_df <- rnorm(32)
+lm(disp ~ not_in_df, data = mtcars)
+```
+
+But what if the name exists in both environments, which one prevails?
+
+```{r}
+cyl <- "this would throw an error"
+lm(disp ~ cyl, data = mtcars)
+```
+
+Thus, the data environment is evaluated before the enclosed environment, we say the data environment does **overscope**.
 
 These are, to my understanding, the core elements of NSE in base R. If you don't care about  tidy eval you can stop reading here and try to build your own NSE functions. Thanks for making it this far.
 
@@ -190,7 +206,7 @@ So the functions that use tidy eval, like those in `dplyr`, automatically quote 
 
 ## `quosure`
 
-Very nice, that quaisquoting. Now what's up with quosures? From their name you might guess they are hybrids of `quotes` and `closures`. We have seen that combination before when we looked at formulas. But formulas are not expressions, they are a DSL that is created through NSE. If we look at quosures, we will see that they behave both like expressions and as formulas.
+Very nice, that quaisquoting. Now what's up with quosures? From their name you might guess they are hybrids of `quotes` and `closures`. We have seen that combination before when we looked at formulas. If we look at quosures, we will see that they are a subclass of the formula, besides being a class of their own.
 
 ```{r}
 quo(z) %>% class()
@@ -205,38 +221,9 @@ quo(2 + 2) %>% class()
 ```
 Note that quosures don't make a lower level distinction between calls and names. Every expression becomes a quosure.
 
-Before we dig in an elaborate example, there is the concept of **overscope** to discuss. What would you expect the following would return?
-
-```{r eval=FALSE}
-x <- "The enclosed environment"
-x_quoted <- quo(x)
-eval_func <- function(q) {
-  x <- "The function environment"
-  rlang::eval_tidy(q)
-}
-eval_func(x_quoted)
-```
-The quosure *x_quoted* has access to two environments in which the variable *x* lives. The question is, which one prevails? The answer is:
-
-```{r echo=FALSE}
-x <- "The enclosed environment"
-x_quoted <- quo(x)
-eval_func <- function(q) {
-  x <- "The function environment"
-  rlang::eval_tidy(q)
-}
-```
-
-
-```{r}
-eval_func(x_quoted)
-```
-
-The enclosed environment does *overscope* the function environment.
-
 When is capturing of the environment by the expression actually useful? When the quosure is created in one environment and evaluated in another. This typically happens when it is created in a function and evaluated in the global environment or another function.
 
-In base R NSE a function can evaluate a quoted argument, it can quote a bare statement, it can even return an expression. What it cannot do however, is giving the expression memory of the variables that were present at creation.
+In base R NSE a function can evaluate a quoted argument, it can quote a bare statement, it can even return an expression. What it cannot do however, is giving the returned expression memory of the variables that were present at creation.
 
 ```{r error = TRUE}
 base_NSE_example <- function(some_arg) {
@@ -268,6 +255,19 @@ tidy_eval_example(4) %>%
 ```
 
 The value in the enclosed environment is thus carried with the quosure wherever it goes, but does not have to be used. We can also evaluate (a part) of the quosure in a different environment. 
+
+So, we can provide a data argument to overscope the enclosed environment. But what about the enclosed environment versus the environment where the quosure is evaluated. Which one overscopes? Then answer is:
+
+```{r}
+x <- "the enclosed env"
+x_quoted <- quo(x)
+eval_x <- function(q){
+  x <- "the calling env"
+  rlang::eval_tidy(q)
+}
+eval_x(x_quoted)
+```
+
 
 # How do base R NSE and tidy eval play together?
 
