restored typos in last two blogs

--- a/_posts/2017-09-10-nse.md
+++ b/_posts/2017-09-10-nse.md
@@ -12,7 +12,7 @@ As with many aspects of the tidyverse, its non-standard evaluation (NSE) impleme
 
 My approach was listing a number of terms and study them one by one. Mainly consulting [Advanced R](http://adv-r.hadley.nz/) and the [R Language Definition](ftp://cran.r-project.org/pub/R/doc/manuals/r-release/R-lang.html). For tidy eval I leaned heavily on the [Programming with dplyr vignette](https://cran.r-project.org/web/packages/dplyr/vignettes/programming.html) and the function documentations. This is also how this blog post is built. We are hopping from term to term, to we see how they relate. You will find references to the sources in the text, in case you want to read more about a topic.
 
-*Note this is v3, in which the overscope gets mentioned and quosures are more elaborated on. To see earlier versions see [here](https://github.com/EdwinTh/EdwinTh.github.io/releases).*
+*Note this is v3, in which the overscope gets mentioned and quosures are more elaborated on. To read earlier versions see [here](https://github.com/EdwinTh/EdwinTh.github.io/releases).*
 
 # Base R, non-standard evaluation
 
@@ -189,13 +189,13 @@ Keep the concept of a closure in mind, we will revisit it.
 
 ## `substitute` and `promise`
 
-With the knowledge gained in the above we can start and try to write our own NSE functions. Lets make a function that adds a column to a data frame that is the square of a column that is already in it.
+With the knowledge gained in the above we can start and try to write our own NSE functions. Lets make a function that adds a column to a data frame that is the square of a column it already contains.
 
 
 ```r
 add_squared <- function(x, col_name) {
   new_colname      <- paste0(deparse(col_name), "_sq")
-  x[, new_colname] <- x[ ,deparse(col_name)]^2
+  x[, new_colname] <- x[, deparse(col_name)]^2
   x
 }
 add_squared(mtcars, quote(cyl)) %>% head(1)
@@ -206,7 +206,7 @@ add_squared(mtcars, quote(cyl)) %>% head(1)
 ## Mazda RX4  21   6  160 110  3.9 2.62 16.46  0  1    4    4     36
 ```
 
-You might say, "that is not too convenient, I still need to quote the col_name myself". Well, you are very right, it would be more helpful if the function did the quoting for you. Unfortunately placing `quote(col_name)` inside the function body is of no use. `quote()` makes a literal quote of its input. So it would make the `name` *col_name* here each time it was called, no matter the value that was given to the argument. Rather than quoting the value that was provided to this argument. 
+You might say, "that is not too convenient, I still need to quote the `col_name` myself". Well, you are very right, it would be more helpful if the function did the quoting for you. Unfortunately placing `quote(col_name)` inside the function body is of no use. `quote()` makes a literal quote of its input. So it would make the `name` *col_name* here each time it was called, no matter the value that was given to the argument, rather than quoting the value that was provided to this argument. 
 
 Here we need `substitute()`. This will lookup all the object names provided to it, and if it finds a value for that name, it will substitute the name for its value [Adv-R](http://adv-r.hadley.nz/nse.html#substitute). Lets do a filter function to demonstrate.
 
@@ -228,7 +228,7 @@ my_filt(mtcars, mpg == 21)
 
 Yeah, that works. But, wait a minute. How does `eval()` now know that *mpg* is a column in `x`? We provided `x` to the `eval` function, but how does this work? Well, the data frame `x` was provided to the `envir` argument of `eval()`. A data frame, thus, is a valid environment in which we can evaluate expressions. *mpg* lives in `x`, so the evaluation of `filt_cond_q` here gives the desired result.
 
-When you think about it a little longer, NSE is only possible when function arguments are not evaluated directly. If the function was the inpatient kid that wanted to put `filt_cond` in its mouth right away, it would have failed to find an object with the name *mpg* in the global environment. When the function is called, a provided arguments is stored in a **promise**. The promise of the argument contains the value of the argument, but also an expression of the argument. The function does not bother about the value of the promise, until the function argument is actually used in the function. The `substitute()` function does only enter the expression part of the promise. In the `my_filt()` example, the promise associated with the `x` argument will have the actual data frame belonging to the object `mtcars` as its value, and the name *mtcars* as its expression. In the second and third line of the function, the value of this argument is accessed. The promise associated with the `filt_cond` argument, however. does not have a value. But it does have a call as its expression. As soon as we use this argument, the function would fail. But we don't. With `substitute()` we only access the expression of the promise [R lang](https://cran.r-project.org/doc/manuals/r-release/R-lang.html#Promise-objects). 
+When you think about it a little longer, NSE is only possible when function arguments are not evaluated directly. If the function was the inpatient kid that wanted to put `filt_cond` in its mouth right away, it would have failed to find an object with the name *mpg* in the global environment. When the function is called, a provided arguments is stored in a **promise**. The promise of the argument contains the value of the argument, but also an expression of the argument. The function does not bother about the value of the promise, until the function argument is actually used in the function. The `substitute()` function does only enter the expression part of the promise. In the `my_filt()` example, the promise associated with the `x` argument will have the actual data frame belonging to the object `mtcars` as its value, and the name *mtcars* as its expression. In the second and third line of the function, the value of this argument is accessed. The promise associated with the `filt_cond` argument, however, does not have a value. But it does have a call as its expression. As soon as we use this argument, the function would fail. But we don't. With `substitute()` we only access the expression of the promise [R lang](https://cran.r-project.org/doc/manuals/r-release/R-lang.html#Promise-objects). 
 
 ## `formula` and `overscoping`
 
@@ -256,7 +256,7 @@ lm(disp ~ not_in_df, data = mtcars)
 ## 
 ## Coefficients:
 ## (Intercept)    not_in_df  
-##      234.73       -14.06
+##      233.22        31.98
 ```
 
 But what if the name exists in both environments, which one prevails?
@@ -287,7 +287,7 @@ There are two key additions of tidy eval to base R NSE. It uses **quasiquotation
 
 ## `quasiquotation`
 
-We now know that in normal quotation the expression is captured to be evaluated later, rather than swallowed right away. Quasiquotation enables the user to swallow parts of the expression right away, while quoting the rest. Let's find out with an example. We can quote the following simple function.
+We now know that in normal quotation the expression is captured to be evaluated later, rather than swallowed right away. Quasiquotation enables the user to swallow parts of the expression right away, while quoting the rest. We can quote the following simple function.
 
 
 ```r
@@ -307,7 +307,7 @@ rlang::expr(z - !!x + 4)
 ```
 
 ```
-## z - 8
+## z - (4 + 4)
 ```
 
 ```r
