--- a/_source/2017-xx-xx-workflow.Rmd
+++ b/_source/2017-xx-xx-workflow.Rmd
@@ -8,23 +8,23 @@ output: html_document
 tags: [R, data science, software engineering, workflow]
 ---
 
-If you are a data scientist who primarily uses R, chances are you had no formal training in software development. I certainly did not pick up much skills in that direction during my statistics masters. For years my workflow was basically loading dataset and hack away on them. In the best case these scripts came to some conclusion or final data set. Usually they abruptly ended. Complex projects could result in a great number of scripts and data exports. Needless to say that reducability was low and stress could get high when some delivery went wrong.
+If you are a data scientist who primarily works with R, chances are you had no formal training in software development. I certainly did not pick up many skills in that direction during my statistics masters. For years my workflow was basically loading a dataset and hack away on it, In the best case my R-script came to some kind of conclusion or final data set but usually it abruptly ended. Complex projects could result in a great number of scripts and data exports. Needless to say, reducability was typically low and stress could get high when some delivery went wrong.
 
 ## Picking up some software skills
 
-Colleagues pointed me to some customs in software design, such as creating functions and classes (and documenting them), writing unit tests, and packaging your work. I started to read about these and was soon working my way through Hadley's [R packages](http://r-pkgs.had.co.nz/). I came to a adopt a rigorous system of solely writing functions, and thoroughly documenting and unit testing them. No matter the nature of the project I was working on, I treated is as a package that should be published on CRAN. This slowed me down considerably though. I needed increasing amounts of time to answer relatively simple questions. Maybe now I was overengineering, restricting myself in such a way I was losing productivity.
+Colleagues pointed me to some customs in software design, such as creating functions and classes (and documenting them), writing unit tests, and packaging-up your work. I started to read about these concepts and was soon working my way through Hadley's [R packages](http://r-pkgs.had.co.nz/) to see how it was done in R. I came to a adopt a rigorous system of solely writing functions, and thoroughly documenting and unit testing them. No matter the nature of the project I was working on, I treated is as a package that should be published on CRAN. This slowed me down considerably, though. I needed increasing amounts of time to answer relatively simple questions. Maybe now I was overengineering, restricting myself in such a way I was losing productivity.
 
 ## Data science product
 
-In my opinion, the tension between efficiency and rigour is that the data scientist's product usually is not software, but insight. This goal is not always served best by writing code that meets the highest standards, because this can make an insight more expensive than necesarry, timewise. A software engineer's job is much more clear cut. His product is software, and the better his software, the better he does his job. However, when a data scientist is asked if she can deliver an exploratory analysis on a new data set, should she create a full software stack right away? I would say not. Of course clean, well documented scripts will lead to greater reproducibility of and confidence in her results. However, writing solely functions and classes and put a load of unit tests is overkill in this stage.
+In my opinion, the tension between efficiency and rigor in analysis, is because the data scientist's product usually is not software, but insight. This goal is not always served best by writing code that meets the highest software standards, because this can make an insight more expensive than necessary, timewise. A software engineer's job is much more clear cut. His product is software, and the better his software, the better he does his job. However, when a data scientist is asked if she can deliver an exploratory analysis on a new data set, should she create a full software stack for it right away? I would say not. Of course clean, well documented scripts will lead to greater reproducibility of and confidence in her results. However, writing solely functions and classes and put a load of unit tests on them is overkill in this stage.
 
 ## A dual mode
 
-I came to a dual workflow, with which I am quite happy. It has a formal split between exploratory stage and a product stage.
+I came to a dual workflow, with which I am quite happy. It has a hard split between the exploratory stage and the product stage of a project.
 
 ### Exploratory stage
 
-Starting an analysis, I want to get to first results as quickly as possible. I typically work in R markdown files, in which I take a lot of notes about the quality of the data, assumptions tested, relations found, and things that are not yet clear to me. Although being still exploratory, I already create a lot of functions in this stage. Functions to do transformations, create specific plots and test specific relationships. These functions are already generic. It is my experience that data is often refreshed, even when this is not anticipated at the start of the project. I don't hardcode names of dataframes and columns but give them as arguments to functions with the current names as their default values. These functions can be quickly lifted to the product stage. Typically, the exploratory stage is wrapped-up by a report in which the major insights and next-steps are described. More often than not, the exporatory stage is the only part of a project. Often we have to conclude that the project goal cannot be reached (yet). The quicker we can get to such a conclusion, the less resources are wasted.
+Starting an analysis, I want to get to first results as quickly as possible. R markdown files are great for this, in which you can take tons of notes about the quality of the data, assumptions tested, relations found, and things that are not yet clear to me. Although being still exploratory, creating a lot of functions in this stage can be already worthwhile. Functions to do transformations, create specific plots and test specific relationships. I aim for creating functions that are as generic as is feasible from the start. It is my experience that data is often refreshed or adjusted, even when this was not anticipated at the start of the project. I don't hardcode names of dataframes and columns but give them as arguments to functions with the current names as their default values. These functions can be quickly lifted to the product stage. Functions are only written though, if they facilitate the exploration. If not I am happy to analyze the data with ordinary R code. Typically, the exploratory stage is wrapped-up by a report in which the major insights and next-steps are described. More often than not, the exporatory stage is the only part of a project. Often we have to conclude that the project goal cannot be reached (yet). The quicker we can get to such a conclusion, the less resources are wasted.
 
 ### Product stage
 
